@@ -1,15 +1,16 @@
-/* 
+/*
  * pkgb.c --
  *
- *	This file contains a simple Tcl package "pkgb" that is intended
- *	for testing the Tcl dynamic loading facilities.	 It can be used
- *	in both safe and unsafe interpreters.
+ *	This file contains a simple Tcl package "pkgb" that is intended for
+ *	testing the Tcl dynamic loading facilities. It can be used in both
+ *	safe and unsafe interpreters.
  *
  * Copyright (c) 1995 Sun Microsystems, Inc.
  *
- * See the file "license.terms" for information on usage and redistribution
- * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
+ * See the file "license.terms" for information on usage and redistribution of
+ * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  */
+
 #include "tcl.h"
 
 /*
@@ -17,17 +18,17 @@
  */
 
 static int    Pkgb_SubObjCmd _ANSI_ARGS_((ClientData clientData,
-		Tcl_Interp *interp, int objc, Tcl_Obj * CONST objv[]));
+		Tcl_Interp *interp, int objc, Tcl_Obj *CONST objv[]));
 static int    Pkgb_UnsafeObjCmd _ANSI_ARGS_((ClientData clientData,
-		Tcl_Interp *interp, int objc, Tcl_Obj * CONST objv[]));
+		Tcl_Interp *interp, int objc, Tcl_Obj *CONST objv[]));
 
 /*
  *----------------------------------------------------------------------
  *
  * Pkgb_SubObjCmd --
  *
- *	This procedure is invoked to process the "pkgb_sub" Tcl command.
- *	It expects two arguments and returns their difference.
+ *	This procedure is invoked to process the "pkgb_sub" Tcl command. It
+ *	expects two arguments and returns their difference.
  *
  * Results:
  *	A standard Tcl result.
@@ -43,17 +44,17 @@ Pkgb_SubObjCmd(dummy, interp, objc, objv)
     ClientData dummy;		/* Not used. */
     Tcl_Interp *interp;		/* Current interpreter. */
     int objc;			/* Number of arguments. */
-    Tcl_Obj * CONST objv[];	/* Argument objects. */
+    Tcl_Obj *CONST objv[];	/* Argument objects. */
 {
     int first, second;
 
     if (objc != 3) {
 	Tcl_WrongNumArgs(interp, 1, objv, "num num");
-        return TCL_ERROR;
+	return TCL_ERROR;
     }
     if ((Tcl_GetIntFromObj(interp, objv[1], &first) != TCL_OK)
 	    || (Tcl_GetIntFromObj(interp, objv[2], &second) != TCL_OK)) {
-        return TCL_ERROR;
+	return TCL_ERROR;
     }
     Tcl_SetObjResult(interp, Tcl_NewIntObj(first - second));
     return TCL_OK;
@@ -64,8 +65,8 @@ Pkgb_SubObjCmd(dummy, interp, objc, objv)
  *
  * Pkgb_UnsafeObjCmd --
  *
- *	This procedure is invoked to process the "pkgb_unsafe" Tcl command.
- *	It just returns a constant string.
+ *	This procedure is invoked to process the "pkgb_unsafe" Tcl command. It
+ *	just returns a constant string.
  *
  * Results:
  *	A standard Tcl result.
@@ -81,10 +82,9 @@ Pkgb_UnsafeObjCmd(dummy, interp, objc, objv)
     ClientData dummy;		/* Not used. */
     Tcl_Interp *interp;		/* Current interpreter. */
     int objc;			/* Number of arguments. */
-    Tcl_Obj * CONST objv[];	/* Argument objects. */
+    Tcl_Obj *CONST objv[];	/* Argument objects. */
 {
-    Tcl_SetObjResult(interp, Tcl_NewStringObj("unsafe command invoked", -1));
-    return TCL_OK;
+    return Tcl_EvalEx(interp, "list unsafe command invoked", -1, TCL_EVAL_GLOBAL);
 }
 
 /*
@@ -92,8 +92,8 @@ Pkgb_UnsafeObjCmd(dummy, interp, objc, objv)
  *
  * Pkgb_Init --
  *
- *	This is a package initialization procedure, which is called
- *	by Tcl when this package is to be added to an interpreter.
+ *	This is a package initialization procedure, which is called by Tcl
+ *	when this package is to be added to an interpreter.
  *
  * Results:
  *	None.
@@ -104,17 +104,20 @@ Pkgb_UnsafeObjCmd(dummy, interp, objc, objv)
  *----------------------------------------------------------------------
  */
 
-int
+DLLEXPORT int
 Pkgb_Init(interp)
-    Tcl_Interp *interp;		/* Interpreter in which the package is
-				 * to be made available. */
+    Tcl_Interp *interp;		/* Interpreter in which the package is to be
+				 * made available. */
 {
     int code;
 
-    if (Tcl_InitStubs(interp, TCL_VERSION, 1) == NULL) {
-	return TCL_ERROR;
+    if (Tcl_InitStubs(interp, "8.4", 0) == NULL) {
+	if (Tcl_InitStubs(interp, "8.4-", 0) == NULL) {
+	    return TCL_ERROR;
+	}
+	Tcl_ResetResult(interp);
     }
-    code = Tcl_PkgProvide(interp, "Pkgb", "2.3");
+    code = Tcl_PkgProvideEx(interp, "Pkgb", "2.3", NULL);
     if (code != TCL_OK) {
 	return code;
     }
@@ -130,8 +133,8 @@ Pkgb_Init(interp)
  *
  * Pkgb_SafeInit --
  *
- *	This is a package initialization procedure, which is called
- *	by Tcl when this package is to be added to an unsafe interpreter.
+ *	This is a package initialization procedure, which is called by Tcl
+ *	when this package is to be added to a safe interpreter.
  *
  * Results:
  *	None.
@@ -142,19 +145,22 @@ Pkgb_Init(interp)
  *----------------------------------------------------------------------
  */
 
-int
+DLLEXPORT int
 Pkgb_SafeInit(interp)
-    Tcl_Interp *interp;		/* Interpreter in which the package is
-				 * to be made available. */
+    Tcl_Interp *interp;		/* Interpreter in which the package is to be
+				 * made available. */
 {
     int code;
 
-    if (Tcl_InitStubs(interp, TCL_VERSION, 1) == NULL) {
-	return TCL_ERROR;
+    if (Tcl_InitStubs(interp, "8.4", 0) == NULL) {
+	if (Tcl_InitStubs(interp, "8.4-", 0) == NULL) {
+	    return TCL_ERROR;
+	}
+	Tcl_ResetResult(interp);
     }
-    code = Tcl_PkgProvide(interp, "Pkgb", "2.3");
+    code = Tcl_PkgProvideEx(interp, "Pkgb", "2.3", NULL);
     if (code != TCL_OK) {
-      return code;
+	return code;
     }
     Tcl_CreateObjCommand(interp, "pkgb_sub", Pkgb_SubObjCmd, (ClientData) 0,
 	    (Tcl_CmdDeleteProc *) NULL);
